# Matrical

./: .gitignore  Cargo.toml  LICENSE  README.md  a.sh  map.txt
src/: Matrical2.code-workspace  attribute.rs  bench.rs  error.rs  lib.rs  matrix.rs  tests.rs
src/db/: mod.rs  surreal_db.rs
src/lenses/: mod.rs  prelude.rs
src/operations/: aggregate.rs  attribute.rs  cog.rs  element.rs  filter.rs  gears.rs  mechanics.rs  mod.rs  sort.rs
src/schematics/: data.rs  element.rs  matrix.rs  mod.rs  vector.rs
src/strategies/: aggregate.rs  cog.rs  gear.rs  lens.rs  mod.rs  sort.rs  tag.rs
