

[package]
name = "matrical"
version = "0.1.0"
edition = "2021"
author = "Anthony Gardner"

[dependencies]
ndarray = "0.15.3"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
crossbeam = "0.8.2"
surrealdb = "1.0.0-beta.9"
dashmap = "5.4.0"

[dev-dependencies]
criterion = "0.4"

